# DataStructure

./: .gitignore  CMakeLists.txt  Dynamic_Array_Implementation_of_Sequential_List.c  SIngly_Linked_List  SIngly_Linked_List.c  Static_Array_Implementation_of_Sequential_List.c
